--- a/代码/2-axios使用/2-axios基本使用.html
+++ b/代码/2-axios使用/2-axios基本使用.html
@@ -1,25 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>axios基本使用</title>
-    <link crossorigin="anonymous" href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      crossorigin="anonymous"
+      href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h2 class="page-header">基本使用</h2>
-        <button class="btn btn-primary"> 发送GET请求 </button>
-        <button class="btn btn-warning" > 发送POST请求 </button>
-        <button class="btn btn-success"> 发送 PUT 请求 </button>
-        <button class="btn btn-danger"> 发送 DELETE 请求 </button>
+      <h2 class="page-header">基本使用</h2>
+      <button class="btn btn-primary">发送GET请求</button>
+      <button class="btn btn-warning">发送POST请求</button>
+      <button class="btn btn-success">发送 PUT 请求</button>
+      <button class="btn btn-danger">发送 DELETE 请求</button>
     </div>
     <script>
-        //获取按钮
-        const btns = document.querySelectorAll('button');
+      //获取按钮
+      const btns = document.querySelectorAll("button");
 
+      btns[0].addEventListener("click", function () {
+        axios({
+          method: "GET",
+          url: "http://localhost:3000/posts",
+        }).then((Response) => console.log(Response));
+      });
+
+      btns[1].addEventListener("click", function () {
+        axios({
+          method: "POST",
+          url: "http://localhost:3000/posts",
+          data: {
+            id: 4,
+            title: "Damon's test 2",
+            author: "Damon",
+          },
+        }).then((Response) => console.log(Response));
+      });
+      btns[2].addEventListener("click", function () {
+        axios({
+          method: "PUT",
+          url: "http://localhost:3000/posts/3",
+          data: {
+            title: "Damon's test",
+            author: "John",
+          },
+        }).then((Response) => console.log(Response));
+      });
+      btns[3].addEventListener("click", function () {
+        axios({
+          method: "DELETE",
+          url: "http://localhost:3000/posts/3",
+        }).then((Response) => console.log(Response));
+      });
+      /*
         //第一个
         btns[0].onclick = function(){
             //发送 AJAX 请求
@@ -81,8 +123,7 @@
                 console.log(response);
             });
         }
-
+        */
     </script>
-</body>
-
+  </body>
 </html>
