--- a/代码/2-axios使用/6-拦截器.html
+++ b/代码/2-axios使用/6-拦截器.html
@@ -1,62 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>拦截器</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        // Promise
-        // 设置请求拦截器  config 配置对象
-        axios.interceptors.request.use(function (config) {
-            console.log('请求拦截器 成功 - 1号');
-            //修改 config 中的参数
-            config.params = {a:100};
+      axios.interceptors.request.use(
+        function (config) {
+          // console.log(config);
+          console.log("request 拦截器1");
+          return config;
+        },
+        function (error) {
+          // 对请求错误做些什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
+      axios.interceptors.request.use(
+        function (config) {
+          // console.log(config);
+          console.log("request 拦截器2");
+          return config;
+        },
+        function (error) {
+          // 对请求错误做些什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
+      axios.interceptors.request.use(
+        function (config) {
+          // console.log(config);
+          console.log("request 拦截器3");
+          return config;
+        },
+        function (error) {
+          // 对请求错误做些什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
 
-            return config;
-        }, function (error) {
-            console.log('请求拦截器 失败 - 1号');
-            return Promise.reject(error);
-        });
+      // 添加响应拦截器
+      axios.interceptors.response.use(
+        function (response) {
+          // 2xx 范围内的状态码都会触发该函数。
+          // 对响应数据做点什么
+          console.log("response 拦截器1");
+          return response;
+        },
+        function (error) {
+          // 超出 2xx 范围的状态码都会触发该函数。
+          // 对响应错误做点什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
+      axios.interceptors.response.use(
+        function (response) {
+          // 2xx 范围内的状态码都会触发该函数。
+          // 对响应数据做点什么
+          console.log("response 拦截器2");
+          return response;
+        },
+        function (error) {
+          // 超出 2xx 范围的状态码都会触发该函数。
+          // 对响应错误做点什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
+      axios.interceptors.response.use(
+        function (response) {
+          // 2xx 范围内的状态码都会触发该函数。
+          // 对响应数据做点什么
+          console.log("response 拦截器3");
+          return response;
+        },
+        function (error) {
+          // 超出 2xx 范围的状态码都会触发该函数。
+          // 对响应错误做点什么
+          console.log(error);
+          return Promise.reject(error);
+        }
+      );
+      axios({
+        method: "GET",
+        url: "http://localhost:3000/posts",
+      }).then((resp) => console.log(resp));
+      // Promise
+      //   // 设置请求拦截器  config 配置对象
+      //   axios.interceptors.request.use(
+      //     function (config) {
+      //       console.log("请求拦截器 成功 - 1号");
+      //       //修改 config 中的参数
+      //       config.params = { a: 100 };
 
-        axios.interceptors.request.use(function (config) {
-            console.log('请求拦截器 成功 - 2号');
-            //修改 config 中的参数
-            config.timeout = 2000;
-            return config;
-        }, function (error) {
-            console.log('请求拦截器 失败 - 2号');
-            return Promise.reject(error);
-        });
+      //       return config;
+      //     },
+      //     function (error) {
+      //       console.log("请求拦截器 失败 - 1号");
+      //       return Promise.reject(error);
+      //     }
+      //   );
 
-        // 设置响应拦截器
-        axios.interceptors.response.use(function (response) {
-            console.log('响应拦截器 成功 1号');
-            return response.data;
-            // return response;
-        }, function (error) {
-            console.log('响应拦截器 失败 1号')
-            return Promise.reject(error);
-        });
+      //   axios.interceptors.request.use(
+      //     function (config) {
+      //       console.log("请求拦截器 成功 - 2号");
+      //       //修改 config 中的参数
+      //       config.timeout = 2000;
+      //       return config;
+      //     },
+      //     function (error) {
+      //       console.log("请求拦截器 失败 - 2号");
+      //       return Promise.reject(error);
+      //     }
+      //   );
 
-        axios.interceptors.response.use(function (response) {
-            console.log('响应拦截器 成功 2号')
-            return response;
-        }, function (error) {
-            console.log('响应拦截器 失败 2号')
-            return Promise.reject(error);
-        });
+      //   // 设置响应拦截器
+      //   axios.interceptors.response.use(
+      //     function (response) {
+      //       console.log("响应拦截器 成功 1号");
+      //       return response.data;
+      //       // return response;
+      //     },
+      //     function (error) {
+      //       console.log("响应拦截器 失败 1号");
+      //       return Promise.reject(error);
+      //     }
+      //   );
 
-        //发送请求
-        axios({
-            method: 'GET',
-            url: 'http://localhost:3000/posts'
-        }).then(response => {
-            console.log('自定义回调处理成功的结果');
-            console.log(response);
-        });
-    </script>   
-</body>
+      //   axios.interceptors.response.use(
+      //     function (response) {
+      //       console.log("响应拦截器 成功 2号");
+      //       return response;
+      //     },
+      //     function (error) {
+      //       console.log("响应拦截器 失败 2号");
+      //       return Promise.reject(error);
+      //     }
+      //   );
+
+      //   //发送请求
+      //   axios({
+      //     method: "GET",
+      //     url: "http://localhost:3000/posts",
+      //   }).then((response) => {
+      //     console.log("自定义回调处理成功的结果");
+      //     console.log(response);
+      //   });
+    </script>
+  </body>
 </html>
