--- a/代码/2-axios使用/7-请求取消.html
+++ b/代码/2-axios使用/7-请求取消.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>取消请求</title>
-    <link crossorigin='anonymous' href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      crossorigin="anonymous"
+      href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h2 class="page-header">axios取消请求</h2>
-        <button class="btn btn-primary"> 发送请求 </button>
-        <button class="btn btn-warning" > 取消请求 </button>
+      <h2 class="page-header">axios取消请求</h2>
+      <button class="btn btn-primary">发送请求</button>
+      <button class="btn btn-warning">取消请求</button>
     </div>
     <script>
+      const btnSend = document.querySelector(".btn-primary");
+      const btnCancal = document.querySelector(".btn-warning");
+      const controller = new AbortController();
+      btnSend.addEventListener("click", function () {
+        axios({
+          method: "GET",
+          url: "http://localhost:3000/posts",
+          signal: controller.signal,
+        }).then((Response) => console.log(Response));
+      });
+      btnCancal.addEventListener("click", function () {
+        controller.abort();
+        console.log(1);
+      });
+      /*
         //获取按钮
         const btns = document.querySelectorAll('button');
         //2.声明全局变量
@@ -44,6 +63,7 @@
         btns[1].onclick = function(){
             cancel();
         }
-    </script>   
-</body>
+        */
+    </script>
+  </body>
 </html>
